style.css
* {
    padding: 0;
    margin: 0;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    box-sizing: border-box;
}

body {
    background: #222;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    flex-direction: column;
}

.container{
    height: 580px;
    width: 90%;
    max-width: 670px;
    padding: 30px;
    text-align: center;
    border-radius: 50px;
    background: #2d2d2d;
    border: 0.5px solid #6a6a6a;
    position: relative;
}

.container1{
    height: 80px;
    width: 90%;
    max-width: 670px;
    text-align: center;
    border-radius: 50px;
    background: #2d2d2d;
    border: 0.5px solid #6a6a6a;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 10px;
}

.container h1 {
    font-size: 20px;
    color: #fff;
}

.container hr {
    margin: 20px 0;
    border: 0;
    border-top: .5px solid #6a6a6a;
}

.search, .api {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
}

.search input{
    width: 95%;
    height: 70px;
    background: #474747;
    padding: 24px 90px 24px 35px;
    border-radius: 50px;
    border: 0.5px solid #6a6a6a;
    outline: none;
    font-size: 16px;
    transform: none;
    resize: none;
    position: absolute;
    bottom: 15px;
    color: #c8c8c8;
    scrollbar-width: none;
}
.api input {
    width: 600px;
    height: 50px;
    background: #474747;
    padding: 25px;
    border-radius: 50px;
    border: 0.5px solid #6a6a6a;
    outline: none;
    font-size: 16px;
    transform: none;
    resize: none;
    bottom: 15px;
    color: #c8c8c8;
    scrollbar-width: none;
    margin: 10px;
}

.search img, .api img {
    filter: invert(1);
}

.search input:focus {
    padding: 24px 90px 24px 35px;
}

.search button {
    position: absolute;
    border: none;
    bottom: 35px;
    right: 50px;
    background: transparent;
    cursor: pointer;
    outline: none;
}

#chat {
    display: flex; 
    flex-direction: column; 
    gap: 10px; 
    width: 100%; 
    max-width: 600px; 
    margin: 20px auto; 
    height: 415px; 
    overflow-y: auto;
    border-radius: 10px;
    padding: 15px;
    scrollbar-width: none; 
    text-align: left;
}

.input {
    background-color: #222; 
    padding: 10px 15px;
    border-radius: 10px; 
    border: 0.5px solid #6a6a6a;
    margin: 0; 
    align-self: flex-end; 
    max-width: 80%; 
    word-wrap: break-word; 
    color: #c8c8c8;
    margin-bottom: 15px;
}

.output {
    background-color: #474747; 
    padding: 10px 15px; 
    border-radius: 10px; 
    border: 0.5px solid #6a6a6a;
    margin: 0; 
    align-self: flex-start; 
    max-width: 80%; 
    word-wrap: break-word; 
    color: #c8c8c8;
    margin-bottom: 15px;
}

#api-btn {
    border: none;
    background: transparent;
    cursor: pointer;
    outline: none;
}

#search_area1{
    position: absolute;
    top: 72px;
    min-width: 635px;
    padding: 20px 80px 20px 20px;
}

#api-btn {
    position: absolute;
    right: 450px;
    top: 95px;
}

